# Lab2-4OOP

./: .gitignore  CMakeLists.txt  main.c
Undo/: undo.c  undo.h
consola/: consola.c  consola.h
domeniu/: oferta.c  oferta.h
repository/: repository.c  repository.h
service/: service.c  service.h
testing/: teste_domeniu.c  teste_domeniu.h  teste_repository.c  teste_repository.h  teste_service.c  teste_service.h  teste_validator.c  teste_validator.h
utilities/: filtrari.c  filtrari.h  sortare.c  sortare.h
validator/: validare_oferta.c  validare_oferta.h
